syntax = "proto3";

package post;

service PostService {
  rpc GetPost(GetPostReq) returns (GetPostRes) {};
}

message GetPostReq {
  string postId = 1;
}
message GetPostRes {
  int32 likesCount = 1;
  int32 commentCount = 2;
  string title = 3;
  string createdAt = 4;
  string id = 5;
}